first version mobile fix

--- a/tia/css/style.css
+++ b/tia/css/style.css
@@ -4,12 +4,15 @@ body {
        font-size: 30px;
 }
 
+#banner{
+  width:70%;
+}
 #bannerDiv{
   width:100%;
   text-align: center;
   background-color: black;
-  margin-bottom:50px;
-  margin-top:40px;
+  margin-bottom:60px;
+  margin-top:50px;
 
 }
 .nav{
